remove blank lines and commented out code

--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -1,12 +1,7 @@
-
-
-
 <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
     {% csrf_token %}
     <div class="form-row col-lg-12 d-grid gap-2">
-       
-        <select class="form-select mb-3" name="quantity"  id="id_qty_{{ item.item_id }}" value="{{ item.quantity }}">
-          
+        <select class="form-select mb-3" name="quantity" value="{{ item.quantity }}">
             <option {% if item.quantity == 1 %} selected {% endif %} value="1">1</option>
             <option {% if item.quantity == 2 %} selected {% endif %} value="2">2</option>
             <option {% if item.quantity == 3 %} selected {% endif %} value="3">3</option>
@@ -17,15 +12,9 @@
             <option {% if item.quantity == 8 %} selected {% endif %} value="8">8</option>
             <option {% if item.quantity == 9 %} selected {% endif %} value="9">9</option>
             <option {% if item.quantity == 10 %} selected {% endif %} value="10">10</option>
-
         </select>
-
         <input type="submit" class="btn btn-outline-success mb-3" value="Update">
-        <a class="remove-item  btn btn-outline-warning" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+        <a class="remove-item  btn btn-outline-warning" id="remove_{{ item.item_id }}"
+            data-product_size="{{ item.size }}"><small>Remove</small></a>
     </div>
-   
-    
-
 </form>
-
-
