--- a/blog/templates/blog/blogindex.html
+++ b/blog/templates/blog/blogindex.html
@@ -1,50 +1,30 @@
 {% extends "base.html" %}
 {% load static %}
 {% load cloudinary %}
-
 {% block content %}
-
-    <h4 class="display-6 fw-bold py-4 text-center">{{categorylist.cat}} Blog Posts</h4>
-  
-
-    <div class="album py-5 bg-light">
-        <div class="container">
-           
-               
-               
-            
-         
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {% for post in posts %}
-           
-            <div class="col">
-              <div class="card shadow-sm">
-               
-                <img src="{{ post.image.url }}" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h3 class="card-text">{{post.title}}</h3>
-                  <div class="d-grid align-items-center">
-                    <a href="{{ post.get_absolute_url }}" class="mt-3 stretched-link btn btn-outline-dark">Read Post</a>
-                   
-                  
-                  </div>
-                </div>
-              </div>
+<!-- displays all blog posts on main blog page -->
+<h4 class="display-6 fw-bold py-4 text-center">{{categorylist.cat}} Blog Posts</h4>
+<div class="album py-5 bg-light">
+  <div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      {% for post in posts %}
+      <div class="col">
+        <div class="card shadow-sm">
+          <img src="{{ post.image.url }}" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3 class="card-text">{{post.title}}</h3>
+            <div class="d-grid align-items-center">
+              <a href="{{ post.get_absolute_url }}" class="mt-3 stretched-link btn btn-outline-dark">Read Post</a>
             </div>
-            {% endfor %}
-
-          
-   
-          
-       
-       
           </div>
         </div>
       </div>
-    
-      <div>
-       <br>
-       <br>
-      </div>
-   
+      {% endfor %}
+    </div>
+  </div>
+</div>
+<div>
+  <br>
+  <br>
+</div>
 {% endblock %}
