--- a/dashboard/templates/dashboard/manage_blog.html
+++ b/dashboard/templates/dashboard/manage_blog.html
@@ -1,54 +1,32 @@
 {% extends "base.html" %}
 {% load static %}
 {% load cloudinary %}
-
 {% block content %}
+ <!-- dashboard page for managing blog entries and categories  -->
 <div class="container">
-
   <div class="px-2 py-2 my-2 text-center">
-
     <h1 class="display-5 fw-bold">Manage Blog</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">
         Here you can update blog categories and edit and delete blog posts.</p>
-
     </div>
   </div>
-
-
-
   <div class="m-2 p-2">
     <div class="row">
       <div class="col-md-6">
+        <!-- categories can be added, editied in place with HTMX -->
         <h2 class="display-6 fw-bold">Categories</h2>
-
-
-
-
-
-
-
-
-
-
-
         <div class="tableform">
-
-
-
           <form hx-post="{% url 'add-category' %}" hx-target='#categories' class="">
             {% csrf_token %}
             <input type="text" id="category-input" name="categoryname" class="form-control-sm mr-2"
               placeholder="Category Name" />
             <button type="submit" class="btn btn-success btn-sm">Add Category</button>
           </form>
-
           <table class="table" id="categories">
             <thead>
               <tr>
-
                 <th>Name</th>
-
                 <th></th>
                 <th></th>
               </tr>
@@ -57,8 +35,6 @@
               {% for category in categories %}
               <tr>
                 <td>{{ category.name}}</td>
-
-
                 <td>
                   <button class="btn btn-warning btn-sm " hx-confirm="unset"
                     hx-get="{% url 'edit-category' category.id %}">
@@ -71,27 +47,17 @@
                   </button>
                 </td>
               </tr>
-
-
               {% endfor %}
             </tbody>
           </table>
-
         </div>
-
       </div>
       <div class="col-md-6 ">
         <h2 class="display-6 fw-bold">Posts</h2>
-
         <a class="btn btn-warning  mt-2 mb-1" href="{% url 'create_blog_post' %}">New Post</a>
-
-
-
-
         <table class="table delete-row-example">
           <thead>
             <tr>
-
               <th>Title</th>
               <th></th>
               <th></th>
@@ -102,7 +68,6 @@
             {% for post in posts %}
             <tr>
               <td>{{ post.title}}</td>
-
               <td>
                 <a class="btn btn-success btn-sm" href="{{ post.get_absolute_url }}">View</a>
               </td>
@@ -115,26 +80,11 @@
                 </button>
               </td>
             </tr>
-
-
             {% endfor %}
           </tbody>
         </table>
-
       </div>
-
-
-
-
-
-
     </div>
-
-
-
-
-
   </div>
-
 </div>
 {% endblock %}
