--- a/dashboard/templates/dashboard/manage_orders.html
+++ b/dashboard/templates/dashboard/manage_orders.html
@@ -1,33 +1,23 @@
 {% extends "base.html" %}
 {% load static %}
 {% load cloudinary %}
-
 {% block content %}
 <div class="container">
-
+    <!-- manage orders, view details, mark as shipped or not  -->
     <div class="px-2 py-2 my-2 text-center">
-
         <h1 class="display-5 fw-bold">Manage Orders</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Click each order to view the details , and mark each order as shipped when it is sent
                 out.</p>
-
         </div>
     </div>
-
-
-
     <div class="m-2 p-2">
-
-
-
         <table class="table">
             <thead>
                 <tr>
                     <th scope="col">Order Date</th>
                     <th scope="col">Name</th>
                     <th scope="col">Shipped</th>
-
                     <th scope="col">Mark Shipped</th>
                 </tr>
             </thead>
@@ -37,9 +27,6 @@
                 {% endfor %}
             </tbody>
         </table>
-
-
     </div>
-
 </div>
 {% endblock %}
