--- a/dashboard/templates/dashboard/manage_products.html
+++ b/dashboard/templates/dashboard/manage_products.html
@@ -1,48 +1,32 @@
 {% extends "base.html" %}
 {% load static %}
 {% load cloudinary %}
-
 {% block content %}
 <div class="container">
-
+    <!-- see all products, add/edit/remove categories, add/edit/remove products  -->
     <div class="px-2 py-2 my-2 text-center">
-
         <h1 class="display-5 fw-bold">Manage Products</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Here you can add, edit and delete products on your site.</p>
-
         </div>
     </div>
-
-
-
     <div class="m-2 p-2">
-
     </div>
-
     <div class="m-2 p-2">
         <div class="row">
             <div class="col-md-6">
                 <h2 class="display-6 fw-bold">Categories</h2>
-
-
                 <div class="tableform">
-
-
-
                     <form hx-post="{% url 'add_product_category' %}" hx-target='#categories' class="">
                         {% csrf_token %}
                         <input type="text" id="category-input" name="categoryname" class="form-control-sm mr-2"
                             placeholder="Category Name" />
                         <button type="submit" class="btn btn-success btn-sm">Add Category</button>
                     </form>
-
                     <table class="table" id="categories">
                         <thead>
                             <tr>
-
                                 <th>Name</th>
-
                                 <th></th>
                                 <th></th>
                             </tr>
@@ -51,8 +35,6 @@
                             {% for category in categories %}
                             <tr>
                                 <td>{{ category.name}}</td>
-
-
                                 <td>
                                     <button class="btn btn-warning btn-sm " hx-confirm="unset"
                                         hx-get="{% url 'edit_product_category' category.id %}">
@@ -66,27 +48,17 @@
                                     </button>
                                 </td>
                             </tr>
-
-
                             {% endfor %}
                         </tbody>
                     </table>
-
                 </div>
-
             </div>
             <div class="col-md-6">
                 <h2 class="display-6 fw-bold">Products</h2>
-
                 <a class="btn btn-warning  mt-2 mb-1" href="{% url 'add_product' %}">New Product</a>
-
-
-
-
                 <table class="table delete-row-example">
                     <thead>
                         <tr>
-
                             <th>Name</th>
                             <th>Price</th>
                             <th></th>
@@ -98,10 +70,8 @@
                         {% for product in products %}
                         <tr>
                             <td>{{ product.name}}</td>
-
                             <td>
                                 {{ product.price}}
-
                             <td>
                                 <a class="btn btn-success btn-sm" href="{% url 'product_detail' product.id %}">View</a>
                             </td>
@@ -114,23 +84,11 @@
                                 </button>
                             </td>
                         </tr>
-
-
                         {% endfor %}
                     </tbody>
                 </table>
-
             </div>
-
-
-
         </div>
-
-
-
-
-
     </div>
-
 </div>
 {% endblock %}
