--- a/profiles/templates/profiles/order_details.html
+++ b/profiles/templates/profiles/order_details.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block content %}
- <div class="container">
-    
-
+<div class="container">
+    <!-- order detail page for users  -->
     <div class="text-center m-5">
         <p class="display-4">Order Details</p>
     </div>
@@ -16,7 +14,6 @@
                         <small class="text-muted">Order Info:</small>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Customer Email</p>
@@ -25,7 +22,6 @@
                         <p class="mb-0"><strong>{{ order.email }}</strong></p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Order Number</p>
@@ -34,7 +30,6 @@
                         <p class="mb-0">{{ order.order_number }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Order Date</p>
@@ -43,18 +38,17 @@
                         <p class="mb-0">{{ order.date }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col">
                         <small class="text-muted">Order Details:</small>
                     </div>
                 </div>
-
                 {% for item in order.lineitems.all %}
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="small mb-0 text-black font-weight-bold">
-                            {{ item.product.name }}{% if item.product_size %} - Size {{ item.product.size|upper }}{% endif %}
+                            {{ item.product.name }}{% if item.product_size %} - Size
+                            {{ item.product.size|upper }}{% endif %}
                         </p>
                     </div>
                     <div class="col-12 col-md-8 text-md-right">
@@ -62,13 +56,11 @@
                     </div>
                 </div>
                 {% endfor %}
-
                 <div class="row">
                     <div class="col">
                         <small class="text-muted">Delivering To:</small>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Full Name</p>
@@ -77,7 +69,6 @@
                         <p class="mb-0">{{ order.full_name }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Address 1</p>
@@ -86,7 +77,6 @@
                         <p class="mb-0">{{ order.street_address1 }}</p>
                     </div>
                 </div>
-
                 {% if order.street_address2 %}
                 <div class="row">
                     <div class="col-12 col-md-4">
@@ -97,7 +87,6 @@
                     </div>
                 </div>
                 {% endif %}
-
                 {% if order.county %}
                 <div class="row">
                     <div class="col-12 col-md-4">
@@ -108,7 +97,6 @@
                     </div>
                 </div>
                 {% endif %}
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Town or City</p>
@@ -117,7 +105,6 @@
                         <p class="mb-0">{{ order.town_or_city }}</p>
                     </div>
                 </div>
-
                 {% if order.postcode %}
                 <div class="row">
                     <div class="col-12 col-md-4">
@@ -128,7 +115,6 @@
                     </div>
                 </div>
                 {% endif %}
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Country</p>
@@ -137,7 +123,6 @@
                         <p class="mb-0">{{ order.country }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Phone Number</p>
@@ -146,13 +131,11 @@
                         <p class="mb-0">{{ order.phone_number }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col">
                         <small class="text-muted">Billing Info:</small>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Order Total</p>
@@ -161,7 +144,6 @@
                         <p class="mb-0">{{ order.order_total }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Delivery</p>
@@ -170,7 +152,6 @@
                         <p class="mb-0">{{ order.delivery_cost }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Grand Total</p>
@@ -181,14 +162,9 @@
                 </div>
             </div>
         </div>
-       
         <div class="d-grid gap-2 m-2 d-sm-flex justify-content-sm-center">
             <a class="btn btn-primary btn-lg mt-2 mb-2" role="button" href="{% url 'my_orders' %}">Return To Orders</a>
-            
-          </div>
-       
+        </div>
     </div>
- 
 </div>
-
 {% endblock %}
