--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,49 +1,44 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
-
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
+<div class="container header-container">
+   <div class="row">
+      <div class="col"></div>
+   </div>
+</div>
 {% endblock %}
-
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
-                <hr>
-            </div>
-        </div>
-
-        <form method="post" action="{% url 'remove-profile' %}">
-         {% csrf_token %}
-         <button type="submit" class="btn btn-large btn-danger my-3" onclick="return confirm('Are you sure? This will delete all your information!')">Delete Account</button>
-      </form>
-
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <p class="text-muted">Default Delivery Information</p>
-                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <button class="btn btn-outline-secondary my-3">Update Information</button>
-                </form>
-            </div>
-          
-        </div>
-    </div>
+<!-- user profile view  -->
+<div class="overlay"></div>
+<div class="container">
+   <div class="row">
+      <div class="col">
+         <hr>
+         <h2 class="logo-font mb-4">My Profile</h2>
+         <hr>
+      </div>
+   </div>
+   <!-- allow deletion of profile for GDPR  -->
+   <form method="post" action="{% url 'remove-profile' %}">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-large btn-danger my-3"
+         onclick="return confirm('Are you sure? This will delete all your information!')">Delete Account</button>
+   </form>
+   <div class="row">
+      <div class="col-12 col-lg-6">
+         <p class="text-muted">Default Delivery Information</p>
+         <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-outline-secondary my-3">Update Information</button>
+         </form>
+      </div>
+   </div>
+</div>
 {% endblock %}
-
 {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+{{ block.super }}
+<script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
