--- a/templates/base.html
+++ b/templates/base.html
@@ -1,59 +1,47 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% load cloudinary %}
-
 <!doctype html>
 <html lang="en">
-
 <head>
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- meta tags  -->
     <meta name="description"
         content="Electric Dreams sells prints and posters of computer-genrated artwork with technological and scientific themes.">
     <meta name="keywords"
         content="generative art, dall-e 2, midjourney, science, technology, posters, prints, artwork, AI, artificial intelligence, cyberpunk, retrofuturism, pixel art, art generator">
-
     {% endblock %}
     <!-- favicon -->
-
     <link rel="apple-touch-icon" sizes="180x180"
         href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/apple-touch-icon_wlgjmz.png">
     <link rel="icon" type="image/png" sizes="32x32"
         href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/favicon-32x32_rvonjr.png">
     <link rel="icon" type="image/png" sizes="16x16"
         href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/favicon-16x16_oa0fi3.png">
-
     {% block corecss %}
+    <!-- css and bootstrap  -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
     {% endblock %}
-
     {% block extra_css %}
     {% endblock %}
-
+    <!-- htmx script and stripe  -->
     <script src="https://unpkg.com/htmx.org@1.8.0"
         integrity="sha384-cZuAZ+ZbwkNRnrKi05G/fjBX+azI9DNOkNYysZ0I/X5ZFgsmMiBXgDZof30F5ofc" crossorigin="anonymous">
     </script>
-
     <script src="https://js.stripe.com/v3/"></script>
     <title>Electric Dreams</title>
-
 </head>
-
+ <!-- token for HTMX headers  -->
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     {% include "includes/navbar.html" %}
-
-
-
-
-
-
     <div class="container">
+        <!-- display messages with fade out alerts  -->
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 {% for message in messages %}
@@ -65,30 +53,21 @@
             </div>
         </div>
     </div>
-
-
-
-
     {% block content %}
-
     {% endblock %}
-
     {% include "includes/footer.html" %}
+    <!-- font awesome, jquery and bootstrap JS  -->
     <script src="https://kit.fontawesome.com/42d1be6a3c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
     </script>
-
-
     {% block extra_js %}
     {% endblock %}
-
     {% block postloadjs %}
-
     {% endblock %}
-
+    <!-- script to fade alerts after 1.5 seconds  -->
     <script>
         window.setTimeout(function () {
             $(".alert").fadeTo(500, 0).slideUp(500, function () {
@@ -96,8 +75,6 @@
             });
         }, 1500);
     </script>
-
-
 </body>
 
 </html>
