--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -48,7 +48,13 @@
         <a href="{% url 'product_detail' product.id %}" class="stretched-link"><img src="{{ product.image.url }}" class="card-img-top rounded-0" alt="..."></a>
         <div class="card-body px-0">
           <h6 class="card-text mt-2">{{ product.name }}</h6>
-          <p class="card-text mb-1 text-warning"> <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></p>
+          <p class="card-text mb-1 text-warning"> 
+            {% if product.rating == 1 %}<i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>{% endif %}
+            {% if product.rating == 2 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>{% endif %}
+            {% if product.rating == 3 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>{% endif %}
+            {% if product.rating == 4 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>{% endif %}
+            {% if product.rating == 5 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>{% endif %} 
+          </p>
           <h4 >€{{ product.price }}</h4>
         </div>
       </div>
