Fix wishlist button appearing to non-logged in users

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,7 +18,12 @@
                     class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></p>
             <p>{{product.description |linebreaks}}</p>
             <div class="col-lg-6 d-grid gap-2">
+
+                {% if user.is_authenticated %}
                 {% include "products/includes/wishlist_snippet.html" %}
+                {% else %}
+                Log in to use the wishlist! 
+                {% endif %}
                 <form class="form " action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row col-lg-12 d-grid gap-2">
