Adjusted footer links for colour contrast and fixed label on newsletter form

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -202,7 +202,7 @@
             {% else %}
             <a href="{% url 'products' %}" class="btn btn-outline-dark  my-2">
 
-                <span class="text-uppercase">Now check out the latest deals!</span>
+                <span class="text-uppercase">Shop again!</span>
             </a>
             {% endif %}
         </div>
