--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,9 +10,9 @@
 
 
 <div class="p-5 mb-4  container-fluid" id="jumbotron">
-  <div class="container py-5">
-    <h1 class="display-5 fw-bold text-white">The Museum of the Future!</h1>
-    <p class="col-md-8 fs-4 text-white">You can be on the cutting edge of art appreciation by checking out the latest designs made entirely by artifial intelligence. </p>
+  <div class="container py-5 ">
+    <h1 class="display-5 fw-bold text-white bg-dark col-lg-6">The Museum of the Future!</h1>
+    <p class="col-md-8 fs-4 text-white bg-dark">You can be on the cutting edge of art appreciation by checking out the latest designs made entirely by artifial intelligence. </p>
     
     <a class="btn btn-light btn-lg" href="{% url 'products' %}" role="button">Shop Now!</a>
   </div>
