Update HTML validation documentation

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -41,8 +41,8 @@
             <h5>Subscribe to our newsletter!</h5>
             <p>Find out whenever we launch new artwork and be first in line.</p>
             <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-              <label for="email" class="visually-hidden">Email address</label>
-              <input type="email" name="email" placeholder="{{ request.user.email }}">
+              <label for="emailn" class="visually-hidden">Email address</label>
+              <input type="email" id="emailn" name="email" placeholder="{{ request.user.email }}">
               <button class="btn btn-primary" type="submit">Subscribe</button>
             </div>
           </form>
