--- a/dashboard/templates/dashboard/snippets/order_detail_snippet.html
+++ b/dashboard/templates/dashboard/snippets/order_detail_snippet.html
@@ -1,7 +1,7 @@
 <tr hx-target="this" hx-swap="outerHTML">
-    <td scope="row">{{ order.date}}<a href="{% url 'order_details' order.order_number %}"
+    <td >{{ order.date}}<a href="{% url 'order_details' order.order_number %}"
             class="btn btn-primary btn-warning mx-2" tabindex="-1" role="button">View Order Details</a>
-        </th>
+        
     <td>{{ order.full_name }}</td>
     <td 
         {% if order.order_shipped %} class="table-success">
