--- a/profiles/templates/profiles/snippets/order_detail_snippet.html
+++ b/profiles/templates/profiles/snippets/order_detail_snippet.html
@@ -1,7 +1,7 @@
 <tr >
-    <td scope="row">{{ order.date}}<a href="{% url 'user_order_details' order.order_number %}"
+    <td>{{ order.date}}<a href="{% url 'user_order_details' order.order_number %}"
             class="btn btn-primary btn-warning mx-2" tabindex="-1" role="button">View Order Details</a>
-        </th>
+        
     <td>{{ order.grand_total }}</td>
     <td 
         {% if order.order_shipped %} class="table-success">
